2004-01-15  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regex.h (REG_STARTEND): Define.
	* posix/regexec.c (regexec): Check for REG_STARTEND.

2004-02-29  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regexec.c (transit_state): Don't handle state == NULL.
	Move state log and backreference management...
	(merge_state_with_log): ... to this function.
	(find_recover_state): New function.
	(check_matching): Use find_recover_state to get a non-NULL
	state when an invalid state is reached.  Compute the amount
	of initial characters to be skipped less conservatively when
	multi-byte character sets are in use.  Do not check
	dfa->nbackref if the state log is NULL.  Initialize err.
	(acquire_init_state_context): Expect err to be initialized.
	Fix spacing.

2004-03-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc32/elf/start.S: Handle PIEs.
	* sysdeps/sparc/sparc64/elf/start.S: Likewise.

2004-03-04  Jakub Jelinek  <jakub@redhat.com>

	* iconv/iconv_prog.c (process_block): Handle omit_invalid.
	If iconv returns EILSEQ with omit_invalid, continue converting
	and return 1 if no other errors are seen.
	(main): Set status to EXIT_FAILURE whenever process_* returns
	nonzero, but only stop processing further files if iy returns
	negative value.

2004-03-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/alpha/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/alpha/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/ia64/posix_fadvise.c: New file.
	* sysdeps/unix/sysv/linux/ia64/posix_fadvise64.c: New file.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list (posix_fadvise64):
	Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/posix_fadvise.c: New file.