@@ -1,4 +1,4 @@
-/* Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+/* Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@redhat.com>, 2002.
 
@@ -165,8 +165,6 @@ do_test (void)
 	  exit (1);
 	}
 
-      /* Waiting for the condition will fail.  But we want the timeout
-	 here.  */
       if (gettimeofday (&tv, NULL) != 0)
 	{
 	  puts ("gettimeofday failed");
