@@ -1,3 +1,8 @@
+2004-03-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-open.c (dl_open_worker): Check that _dl_open is called
+	from the right place.
+
 2004-01-15  Paolo Bonzini  <bonzini@gnu.org>
 
 	* posix/regex.h (REG_STARTEND): Define.
